--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <button id="RunButton" onclick="RunFile()">Запустить</button>
     </div>
     <div class="Section" style="margin-top: 20px;">
-        <div placeholder="Вывод кода" id="output"></div>
+        <div id="output"><span style="color: gray;" class="noselect">Вывод кода</span></div>
     </div>
     <img src="gear.png" id="gear1" class="noselect gear" style="transform: deg(0);">
     <img src="gear.png" id="gear2" class="noselect gear" style="transform: deg(0);">
